# arq_ur5_moveit_config

./: CMakeLists.txt  README.md  package.xml
config/: arq_ur5.srdf  arq_ur5.urdf.xacro  controllers.yaml  kinematics.yaml  ompl_planning.yaml
launch/: arq_ur5_moveit.rviz  arq_ur5_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml
